--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     />
     <title>HTML Extensions Kit</title>
     <link rel="stylesheet" href="./dist/html-extensions-kit.min.css" />
-    <script src="./dist/html-extensions-kit.min.js"></script>
+    <!-- <script src="./dist/html-extensions-kit.min.js"></script> -->
+    <script type="module" src="./src/index.ts"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   </head>
   <body>
     <nav>
@@ -21,12 +23,13 @@
       <version>v0.1.0</version>
       <h2>Guide</h2>
       <ul id="guide">
-        <li data-link="./site/docs/quick-start.html">Quick Start</li>
-        <li data-link="./site/docs/contribution.html">Contribution</li>
+        <li data-link="./site/docs/quick-start.md">Quick Start</li>
+        <li data-link="./site/docs/contribution.md">Contribution</li>
       </ul>
       <h2>Extensions</h2>
       <ul id="extensions">
-        <li data-link="./site/docs/extensions/text-field.html">Text Field</li>
+        <li data-link="./site/docs/extensions/ext-button.md">&lt;ext-button&gt;</li>
+        <li data-link="./site/docs/extensions/ext-text-field.md">&lt;ext-text-field&gt;</li>
       </ul>
     </nav>
     <main></main>
