[fix] fixed bugs on the site
- Changed URL to import library script.
- Make `<main>` scroll when its width grows.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     />
     <title>HTML Extensions Kit</title>
     <link rel="stylesheet" href="./dist/html-extensions-kit.min.css" />
-    <!-- <script src="./dist/html-extensions-kit.min.js"></script> -->
-    <script type="module" src="./src/index.ts"></script>
+    <script src="./dist/html-extensions-kit.min.js"></script>
+    <!-- <script type="module" src="./src/index.ts"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   </head>
   <body>
