--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./site/static/normalize.css" />
-    <link rel="stylesheet" href="./site/static/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&amp;display=swap"
-      rel="stylesheet"
-    />
+<!DOCTYPE html><html lang="en"><head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./site/static/normalize.css">
+    <link rel="stylesheet" href="./site/static/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&amp;display=swap" rel="stylesheet">
     <title>HTML Extensions Kit</title>
-    <link rel="stylesheet" href="./dist/html-extensions-kit.min.css" />
+    <link rel="stylesheet" href="./dist/html-extensions-kit.min.css">
     <script src="./dist/html-extensions-kit.min.js"></script>
     <!-- <script type="module" src="./src/index.ts"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -20,19 +15,17 @@
   <body>
     <nav>
       <h1>HTML Extensions Kit</h1>
-      <version>v0.1.0</version>
+      <version>v0.2.0</version>
       <h2>Guide</h2>
       <ul id="guide">
         <li data-link="./site/docs/quick-start.md">Quick Start</li>
         <li data-link="./site/docs/contribution.md">Contribution</li>
       </ul>
       <h2>Extensions</h2>
-      <ul id="extensions">
-        <li data-link="./site/docs/extensions/ext-button.md">&lt;ext-button&gt;</li>
-        <li data-link="./site/docs/extensions/ext-text-field.md">&lt;ext-text-field&gt;</li>
-      </ul>
+      <ul id="extensions"><li data-link="./site/docs/extensions/ext-button.md">&lt;ext-button&gt;</li><li data-link="./site/docs/extensions/ext-text-field.md">&lt;ext-text-field&gt;</li></ul>
     </nav>
     <main></main>
     <script src="./site/static/index.js"></script>
-  </body>
-</html>
+  
+
+</body></html>
