[feature] Add third-party licenses document.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <ul id="guide">
         <li data-link="./site/docs/quick-start.md">Quick Start</li>
         <li data-link="./site/docs/contribution.md">Contribution</li>
+        <li data-link="./site/docs/third-party-licenses.md">Third-Party Licenses</li>
       </ul>
       <h2>Extensions</h2>
       <ul id="extensions"><li data-link="./site/docs/extensions/ext-button.md">&lt;ext-button&gt;</li><li data-link="./site/docs/extensions/ext-text-field.md">&lt;ext-text-field&gt;</li></ul>
