--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       rel="stylesheet"
     />
     <title>HTML Extensions Kit</title>
-    <!-- <link rel="stylesheet" href="./dist/html-extensions-kit.min.css" /> -->
-    <!-- <script src="./dist/html-extensions-kit.min.js"></script> -->
-    <script type="module" src="./src/index.ts"></script>
+    <link rel="stylesheet" href="./dist/html-extensions-kit.min.css" />
+    <script src="./dist/html-extensions-kit.min.js"></script>
+    <!-- <script type="module" src="./src/index.ts"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   </head>
   <body>
     <nav>
       <h1>HTML Extensions Kit</h1>
-      <version>v0.3.1</version>
+      <version>v0.3.2</version>
       <h2>Guide</h2>
       <ul id="guide">
         <li data-link="./site/docs/quick-start.md">Quick Start</li>
