--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     />
     <title>HTML Extensions Kit</title>
     <link rel="stylesheet" href="./dist/html-extensions-kit.min.css" />
-    <script src="./dist/html-extensions-kit.min.js"></script>
-    <!-- <script type="module" src="./src/index.ts"></script> -->
+    <!-- <script src="./dist/html-extensions-kit.min.js"></script> -->
+    <script type="module" src="./src/index.ts"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   </head>
   <body>
     <nav>
       <h1>HTML Extensions Kit</h1>
-      <version>v0.3.2</version>
+      <version>v0.3.3</version>
       <h2>Guide</h2>
       <ul id="guide">
         <li data-link="./site/docs/quick-start.md">Quick Start</li>
