--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
       rel="stylesheet"
     />
     <title>HTML Extensions Kit</title>
-    <link rel="stylesheet" href="./dist/html-extensions-kit.min.css" />
-    <script src="./dist/html-extensions-kit.min.js"></script>
-    <!-- <script type="module" src="./src/index.ts"></script> -->
+    <link rel="stylesheet" href="./dist/core/html-extensions-kit.min.css" />
+    <script src="./dist/core/html-extensions-kit.min.js"></script>
+    <!-- <script type="module" src="./src/core/index.ts"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/styles/default.min.css"
+    />
+    <script src="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/highlight.min.js"></script>
   </head>
   <body>
     <nav>
@@ -26,7 +31,7 @@
         </button>
       </header>
 
-      <version>v0.3.3</version>
+      <version>v0.3.4</version>
       <h2>Guide</h2>
       <ul id="guide">
         <li data-link="./site/docs/quick-start.md">Quick Start</li>
