--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <script src="./dist/core/html-extensions-kit.min.js"></script>
     <!-- <script type="module" src="./src/core/index.ts"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/styles/default.min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/styles/default.min.css" />
     <script src="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/highlight.min.js"></script>
   </head>
   <body>
@@ -31,7 +28,7 @@
         </button>
       </header>
 
-      <version>v0.3.4</version>
+      <version>v0.3.5</version>
       <h2>Guide</h2>
       <ul id="guide">
         <li data-link="./site/docs/quick-start.md">Quick Start</li>
@@ -48,13 +45,7 @@
     <main>
       <div class="header">
         <button id="btnNav">
-          <svg
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect y="4" width="24" height="3" rx="1.5" fill="currentColor"></rect>
             <rect y="10.5" width="24" height="3" rx="1.5" fill="currentColor"></rect>
             <rect y="17" width="24" height="3" rx="1.5" fill="currentColor"></rect>
