[fix] Changed URL to import library script on the site.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       rel="stylesheet"
     />
     <title>HTML Extensions Kit</title>
-    <link rel="stylesheet" href="./dist/core/html-extensions-kit.min.css" />
-    <script src="./dist/core/html-extensions-kit.min.js"></script>
+    <link rel="stylesheet" href="./dist/html-extensions-kit.css" />
+    <script src="./dist/html-extensions-kit.min.js"></script>
     <!-- <script type="module" src="./src/core/index.ts"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/styles/default.min.css" />
